--- a/main.html
+++ b/main.html
@@ -13,8 +13,7 @@
     <main class="application-container">
         <section class="header">
             <h2 class="title"> 
-                Things to do today, 
-                <input type="text" placeholder="Enter Your Name"> 
+                To Do List For: <input type="text" placeholder="Enter Your Name">
             </h2>
         </section>
 
@@ -63,7 +62,32 @@
                         <div>School</div>
                     </label>
                 </div>
+
+                <input type="submit" value="Add New Task"/>
             </form>
+        </section>
+
+        <section class="todo-list">
+            <h3>Task List:</h3>
+            <div class="list" id="todo-list">
+                <!-- <div class="todo-item">
+                    <label>
+                        <input type="checkbox">
+                        <span class="bubble work"></span>
+                    </label>
+
+                    <div class="todo-content">
+                        <input type="text" value="Check Sales Reports" readonly>
+                    </div>
+
+                    <div class="action">
+                        <button class="edit"> Edit </button>
+                        <button class="delete"> Delete</button>
+                    </div>
+                </div> -->
+
+                
+            </div>
         </section>
 
 
