finished, added date time stamps to tasks

--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
     <main class="application-container">
         <section class="header">
             <h2 class="title"> 
-                To Do List For: <input type="text" placeholder="Enter Your Name">
+                To Do List For: <input type="text" id="name" placeholder="Enter Your Name">
             </h2>
         </section>
 
@@ -68,25 +68,8 @@
         </section>
 
         <section class="todo-list">
-            <h3>Task List:</h3>
+            <h3>TODO List:</h3>
             <div class="list" id="todo-list">
-                <!-- <div class="todo-item">
-                    <label>
-                        <input type="checkbox">
-                        <span class="bubble work"></span>
-                    </label>
-
-                    <div class="todo-content">
-                        <input type="text" value="Check Sales Reports" readonly>
-                    </div>
-
-                    <div class="action">
-                        <button class="edit"> Edit </button>
-                        <button class="delete"> Delete</button>
-                    </div>
-                </div> -->
-
-                
             </div>
         </section>
 
