added calendar time stamp and filter

--- a/main.html
+++ b/main.html
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 </head>
 <body>
     <main class="application-container">
@@ -69,6 +71,14 @@
 
         <section class="todo-list">
             <h3>TODO List:</h3>
+            <label for="category-filter">Filter by Category:</label>
+                <select id="category-filter">
+                    <option value="all">All</option>
+                    <option value="personal">Personal</option>
+                    <option value="work">Work</option>
+                    <option value="finance">Finance</option>
+                    <option value="school">School</option>
+                </select>
             <div class="list" id="todo-list">
             </div>
         </section>
